--- a/src/app/clientes/cadastro-clientes/cadastro-clientes.component.html
+++ b/src/app/clientes/cadastro-clientes/cadastro-clientes.component.html
@@ -1,1 +1,19 @@
-<p>cadastro-clientes works!</p>
+<mat-toolbar class="app-title">Cadastrar Cliente</mat-toolbar>
+<div class="main-div">
+  <mat-card class="center width50" >
+    <form [formGroup]="cadastro" *ngIf="cadastro" (ngSubmit)="submit()" (ngReset)="reiniciarForm()" 
+          autocomplete="off" novalidate>
+      <mat-card-content>
+        <dio-input-text controlTitle="Nome Fantasia *" controlName="nomeFantasia" [formGroup]="cadastro"></dio-input-text>
+        <dio-input-number controlTitle="Latitude *" controlName="latitude" [formGroup]="cadastro"
+                          min="-90" max="90" step="0.0000001"></dio-input-number>
+        <dio-input-number controlTitle="Longitude *" controlName="longitude" [formGroup]="cadastro"
+                          min="-90" max="90" step="0.0000001"></dio-input-number>
+      </mat-card-content>
+      <mat-card-actions>
+        <button type="submit" color="accent" mat-raised-button>Salvar</button>
+        <button type="reset" color="warn" mat-raised-button>Cancelar</button>
+      </mat-card-actions>
+    </form>
+  </mat-card>
+</div>
